# hamr-system-reasoning-prototype

./: README.md
IsabelleFormalization/HAMRMicro04/: HAMRMicro04-Description.md  HAMRMicro04ExecutionSemantics.thy  HAMRMicro04Model.thy  HAMRMicro04PythagoreanExample.thy  HAMRMicro04RegulatorExample.thy  HAMRMicro04RegulatorExampleRefine.thy  HAMRMicro04Spec.thy  SetsAndMaps.thy
IsabelleFormalization/HAMRMicro05/: HAMRMicro05ExecutionSemantics.thy  HAMRMicro05Model.thy  HAMRMicro05Spec.thy
IsabelleFormalization/HAMRMicro05Acyclic/: HAMRMicro05-Description.md  HAMRMicro05ExecutionSemantics.thy  HAMRMicro05Model.thy  HAMRMicro05Spec.thy
IsoletteExample/: README.md
IsoletteExample/855-s26-isolette-project/: README.md  (+2 more)
IsoletteExample/855-s26-isolette-project/isolette/hamr/microkit-initial/crates/thermostat_mt_ma_ma/: Cargo.toml
IsoletteExample/855-s26-isolette-project/isolette/hamr/microkit-initial/crates/thermostat_mt_ma_ma/src/: lib.rs  logging.rs  tests.rs
IsoletteExample/855-s26-isolette-project/isolette/hamr/microkit-initial/crates/thermostat_mt_ma_ma/src/bridge/: extern_c_api.rs  mod.rs  thermostat_mt_ma_ma_GUMBOX.rs  thermostat_mt_ma_ma_api.rs
IsoletteExample/855-s26-isolette-project/isolette/hamr/microkit-initial/crates/thermostat_mt_ma_ma/src/component/: thermostat_mt_ma_ma_app.rs
IsoletteExample/855-s26-isolette-project/isolette/hamr/microkit-initial/crates/thermostat_mt_ma_ma/src/data/: mod.rs
IsoletteExample/855-s26-isolette-project/isolette/hamr/microkit-initial/crates/thermostat_mt_ma_ma/src/data/Isolette_Data_Model/: On_Off.rs  Temp_i.rs
(+655 files in other folders)
